--- a/第03章  K最近邻算法  近朱者赤近墨者黑/第三章 K最邻近算法.ipynb
+++ b/第03章  K最近邻算法  近朱者赤近墨者黑/第三章 K最邻近算法.ipynb
@@ -19,6 +19,10 @@
     }
    ],
    "source": [
+    "'''\n",
+    "玩具数据集\n",
+    "'''\n",
+    "\n",
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "import matplotlib.pyplot as plt\n",
@@ -107,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -130,6 +136,9 @@
     }
    ],
    "source": [
+    "'''\n",
+    "K最近邻算法处理多元分类任务\n",
+    "'''\n",
     "from sklearn.datasets import make_blobs\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -330,6 +339,8 @@
    "source": [
     "'''\n",
     "酒的分类\n",
+    "\n",
+    "数据集概况\n",
     "'''\n",
     "\n",
     "from sklearn.datasets import load_wine\n",
@@ -353,11 +364,34 @@
       "(133, 13)\n",
       "(45, 13)\n",
       "(133,)\n",
-      "(45,)\n"
+      "(45,)\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=None, n_neighbors=1, p=2,\n",
+      "           weights='uniform')\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "测试数据集得分:0.76\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "预测心红酒的分类为:['class_2']\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
+    "酒的分类\n",
+    "\n",
+    "预测\n",
+    "'''\n",
+    "\n",
     "from sklearn.datasets import load_wine\n",
     "\n",
     "wine_dataset = load_wine()\n",
@@ -368,7 +402,24 @@
     "print(X_train.shape)\n",
     "print(X_test.shape)\n",
     "print(y_train.shape)\n",
-    "print(y_test.shape)"
+    "print(y_test.shape)\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
+    "\n",
+    "print('\\n\\n\\n')\n",
+    "knn.fit(X_train, y_train)\n",
+    "print(knn)\n",
+    "\n",
+    "print('\\n\\n\\n')\n",
+    "print('测试数据集得分:{:.2f}'.format(knn.score(X_test, y_test)))\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "X_new = np.array([[13.2,2.77,2.51,18.5,96.6,1.04,2.55,0.57,1.47,6.2,1.05,3.33,820]])\n",
+    "prediction = knn.predict(X_new)\n",
+    "print('\\n\\n\\n')\n",
+    "print(\"预测心红酒的分类为:{}\".format(wine_dataset['target_names'][prediction]))"
    ]
   }
  ],
